--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ djangorestframework==3.15.2
 Faker==17.6.0
 freezegun==1.2.0
 geoip2==4.8.0
+gunicorn==21.2.0
 html2text==2017.10.4
 idna==2.7
 ipaddress==1.0.16
